@@ -9,6 +9,8 @@ Version 0.3s
 ------------
 * Fixed a bug in the save format.
 * You can no longer get into Rigard by mistake (before you have a pass) through the brothel announcer event.
+* New patreon sponsored content by Ben - Gay sex with Estevan (atm you need to be a guy to get this). Final scene:
+ - Fuck him.
 
 --------------------------------------------
              PREVIOUS VERSIONS
